# deep-learning-challenge

./: README.md  pyproject.toml  requirements.txt
src/machine_learning/deep_learning/challenge/day_01/: perceptron_numpy.py
tests/machine_learning/deep_learning/challenge/day_01/: test_percepton_numpy.py
tests/machine_learning/deep_learning/challenge/day_03/: test_mlp_bin_class_hid_layer_pytorch.py
tests/machine_learning/deep_learning/challenge/day_04/: test_mlp_multi_class_dataset_tf_keras.py
tests/machine_learning/deep_learning/challenge/day_05/: test_activation_functions_playground_keras.py  test_activation_functions_playground_pytorch.py
tests/machine_learning/deep_learning/challenge/day_06/: test_from_tensor_to_model_sdf_keras.py  test_from_tensor_to_model_sdf_pytorch.py
tests/machine_learning/deep_learning/challenge/day_07/: test_loss_functions_from_scratch_numpy_mse_bce.py
tests/machine_learning/deep_learning/challenge/day_08/: test_cross_entropy_multi_class_classification_numpy.py  test_loss_functions_keras.py  test_loss_functions_pytorch.py  test_loss_functions_pytorch_keras.py
tests/machine_learning/deep_learning/challenge/day_09/: test_eval_metrics_classification_regression.py
tests/machine_learning/deep_learning/challenge/day_13/: test_backpropagation_manually_numpy.py
tests/machine_learning/deep_learning/challenge/day_15/: test_weight_initialization_strategies_keras.py
tests/machine_learning/deep_learning/challenge/day_16/: test_optimizers_from_scratch.py
tests/machine_learning/deep_learning/challenge/day_17/: test_dropout_L2_regularization_pytorch.py
tests/machine_learning/deep_learning/challenge/day_23/: test_cnn_with_pytorch.py
(+35 files in other folders)
